Fix background of input addon in dark mode

--- a/blackboard.less
+++ b/blackboard.less
@@ -64,6 +64,9 @@ body {
     .modal, .modal-footer {
       color: var(--text-color);
       background-color: var(--bg-color);
+      .add-on {
+        background-color: #333;
+      }
     }
     .help-inline, .help-block {
       color: #aaa;
